@@ -106,6 +106,7 @@ GoodNews.grid.Newsletters = function(config) {
     this.exp = new Ext.ux.grid.RowExpander({
         tpl: new Ext.Template(nlInfos)
         ,enableCaching: false
+        ,lazyRender: false
     });
 
     // Newsletter title and action buttons renderer
@@ -325,7 +326,6 @@ GoodNews.grid.Newsletters = function(config) {
     });
     GoodNews.grid.Newsletters.superclass.constructor.call(this,config);
     this.on('click',this.handleActionButtons,this);
-    this.getView().on('beforerefresh',this._collapseAll,this);
 };
 Ext.extend(GoodNews.grid.Newsletters,MODx.grid.Grid,{
     getMenu: function() {
@@ -738,22 +738,6 @@ Ext.extend(GoodNews.grid.Newsletters,MODx.grid.Grid,{
         });
         //this.SendNewsletterWindow.setValues(this.menu.record);
         this.NewsletterLogWindow.show(e.target);
-    }
-    // Workaround for https://github.com/modxcms/revolution/issues/13989
-    // (method missing in rowExpander plugin in modx.grid.js)
-    ,_expandAll: function() {
-        var a = this.getView().getRows();
-        for (var i=0;i<a.length;i++) {
-            this.exp.expandRow(a[i]);
-        }
-    }
-    // Workaround for https://github.com/modxcms/revolution/issues/13989
-    // (method missing in rowExpander plugin in modx.grid.js)
-    ,_collapseAll: function() {
-        var a = this.getView().getRows();
-        for (var i=0;i<a.length;i++) {
-            this.exp.collapseRow(a[i]);
-        }
     }
 });
 Ext.reg('goodnews-grid-newsletters',GoodNews.grid.Newsletters);
